# Qwen

./: .gitignore  README.md  download_model.py  download_model_mlx.py  main.py  main_mlx.py  process_invoices.py  pyproject.toml
output/: Filling Station.md
output_without_ocr/: Patricia Gapay.md  Yellow Brick.md
